# mcp-lab

./: .gitignore  README.md  TODO.md
db/: README.md  docker-compose.yml  schema.sql  seed_data.sql
mcp-gateway/: .env.example  README.md  package.json
mcp-gateway/src/: index.ts
mcp-pedidos-py/: .env.example  README.md  pyproject.toml
mcp-pedidos-py/src/: __init__.py  server.py
mcp-ventas-node/: README.md  package.json
mcp-ventas-node/src/: index.ts
